variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: '<-' expected but '=' found.
for(y:Int=0;y<x;y++){
         ^Variables:7: error: illegal start of simple expression
for(y:Int=0;y<x;y++){
           ^Variables:7: error: '<-' expected but ';' found.
for(y:Int=0;y<x;y++){
               ^Variables:7: error: illegal start of simple pattern
for(y:Int=0;y<x;y++){
                   ^Variables:12: error: illegal start of simple expression
	}
        ^