variables.Variables.scala.code
val x:Int=0
while(!estSurBiscuit){
  avance()
  x++
}
prendreBiscuit()
for(y:Int=0;y<x;y++){
  recule()
}
poseBiscuit()